syntax = "proto3";

package wormhole;

option go_package="./protobuf";

service WormholeService {
    rpc SendCommand(stream InputMessage) returns (stream OutputMessage);
}

message InputMessage {
    string input = 1;
}

message OutputMessage {
    string output = 1;
}